Remove unnecessary info in install guide