@@ -23,13 +23,9 @@ _All instructions are intended for players who use the vanilla Minecraft launche
 8. In the bottom left of the prompt, click the _More Options_ dropdown.
 9. For JVM Arguments, there should be some arguments already there. At the beginning, you should see `-Xmx[a number here]G`. This is how much RAM is allocated to the game. We recommend allocating anywhere from about 1.5 GB to 3 GB. Avoid going too much higher or lower, as this may cause problems. For example, if you want to allocate 1.5 GB of RAM to Minecraft, **replace** the default `-Xmx` value to:
     * `-Xmx1536M`
-This will allocate 1536 MB to the game (which is equal to 1.5 GB).
-    * Note **(not required, skip if it is too complex)**: You may experience better performance with a different set of arguments. For example, some arguments I like to use are:
-
-        `-Xmx1536M -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:MaxGCPauseMillis=20`
-
-        This will allocate 1.5 GB of RAM to the game, along with the other options. If you choose to use these, **remove all existing arguments** and paste in those arguments. YMMV, and this may improve or decrease performance depending on your system. If they do not work well for you, come back to this dialog and click the _Reset_ button in JVM Arguments.
-10. Your install should look similar to the following:
+    This will allocate 1536 MB to the game (which is equal to 1.5 GB).
+    * Note **(not required, skip if it is too complex)**: You may experience better performance with a different set of arguments entirely. For more information, check the [performance guide](performance).
+1.  Your install should look similar to the following:
 ![macOS Minecraft installation](images/macos-installation.png)
 Press the green _Create_ button to create the installation.
 1.  Go to the folder you chose when creating your installation (in the Game Directory). If you went with our recommendation and chose a folder inside your regular `minecraft` folder, triple click this text:
